synced workSession datai nto db